# wireguard-zk-handshake

./: .config  .gitignore  README.md  README2.md  Vagrantfile  build.sh  dev_reload.sh  openssl_throughput_gbps.sh
experimentation/: README.md  docker-compose.yml  grafana_external.json  history
experimentation/grafana-data/: grafana.db
experimentation/grafana-data/plugins/volkovlabs-echarts-panel/: MANIFEST.txt
run/: .gitignore  clean.sh  install.sh  install_t.sh  nat_nw copy.xml  test.sh  test2.sh  test3.sh  test4.sh  test_generic.sh  test_generic_ns.sh  test_generic_single.sh  test_generic_v1.sh  test_no_wg.sh  vagrant.md  wg_vm_left.sh  wg_vm_right.sh  xdp_redirect_cpu
run/5.4/: xdp_redirect_cpu
userspace/config/: static_pk.hex
userspace/gen-pk/: Cargo.toml
userspace/gen-pk/src/: README.md  main.rs
userspace/wg-zk-daemon/: .env  Cargo.toml  README.md
userspace/wg-zk-daemon/src/: main.rs  netlink.rs  zk.rs
vagrant/: 02-load-module.sh  03-client.sh  03-gateway.sh  build-base.sh  keygen.sh
vagrant/build-base/: Vagrantfile  install-into-box.sh
wireguard-5.15.55/: .main.o.d  build.sh  device.c  device.h  main.c  receive.c  send.c
wireguard-6.8/: Makefile  Makefile_out_of_tree  build_generic.sh  device.c  install.sh  main.c  messages.h  noise.c  peer.c  peer.h  receive.c  send.c  wgzk_genl.c  wgzk_genl.h  zk_debugfs.c  zk_debugfs.h  zk_pending.c  zk_pending.h  zk_procfs.c  zk_proof.c  zk_proof.h
