[package]
name = "wg-zk-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["default","digest","alloc"] }
ed25519-dalek = "2.2.0"
blake2 = "0.10.6"
rand = "0.9.2"
sha2 = "0.10.9"
hmac = "0.12"
hex = "0.4.3"
neli = { version = "0.7.1", features = ["sync","default","netfilter","tokio","async","parking_lot"] }
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
getrandom = "0.3.3"
bytes = "1.10.1"
thiserror = "2.0.16"
dotenvy = "0.15.7"
futures = "0.3.31"
